# prisjakt_scraper

./: .env.local  .env.production  .gitignore  Dockerfile  README.md  alembic.ini  db_connection.sh  docker-compose.yml  invoke_task.sh  pyproject.toml  renovate.json
.github/workflows/: apply-changed-infrastructure.yml  run-tests.yml  test-build-and-push-image.yml
alembic/: README  env.py
alembic/versions/: 1692363120-49f7dbe4a73e_create_product_table.py
prisjakt_scraper/: main.py  scraper.py
prisjakt_scraper/database/: database.py  environment.py
prisjakt_scraper/database/models/: product.py
prisjakt_scraper/database/repositories/: product.py
prisjakt_scraper/logger/: config.py  logger.py
terraform/: main.tf  output.tf  terraform.tfvars  variables.tf
terraform/modules/database/: main.tf  output.tf  variables.tf
terraform/modules/github_actions_iam/: main.tf  variables.tf
terraform/modules/task/: main.tf  output.tf  variables.tf
terraform/modules/vpc/: main.tf  output.tf  variables.tf
terraform/modules/vpc/bastion_host/: main.tf  output.tf  variables.tf
terraform/remote_state/: main.tf  output.tf  variables.tf
tests/: test_scraper.py
tests/data/: product.json
